objects/ESC_SN_AssignmentGroup__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ESC_Assignment_Group__c</fullName>
        <label>Assignment Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_SLA_Default__c</fullName>
        <label>SLA Default</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_SN_Chatter_Group__c</fullName>
        <label>SN Chatter Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Sub_BU__c</fullName>
        <label>SUB-BU</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>ESC_SN_AssignmentGroup</label>
</CustomObject>